[gd_scene load_steps=24 format=2]

[ext_resource path="res://images/spritesheets/Boss1/Boss1_sheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/Boss1.gd" type="Script" id=2]
[ext_resource path="res://shaders/Flash.tres" type="Material" id=3]
[ext_resource path="res://images/spritesheets/Boss1/Boss1_death_sheet.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 396, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 198, 198, 198 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 594, 198, 198 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 594, 198, 198 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 594, 198, 198 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 396, 594, 198, 198 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 198, 198, 198 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 396, 198, 198, 198 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 396, 198, 198 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 198, 198 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 198, 198, 198 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 396, 198, 198 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "attack",
"speed": 4.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=17]
radius = 31.5503
height = 93.4897

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 63.4255, 10 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 53.3441, 10 )

[node name="Boss1" type="KinematicBody2D"]
material = ExtResource( 3 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
SPEED = 100
HEALTH = 1
GOLD_CAP = 45

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 3 )
frames = SubResource( 16 )
animation = "idle"

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -4.00903, 21.3816 )
shape = SubResource( 17 )

[node name="AttackCollision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="end" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( -31.924, 34.4307 )
shape = SubResource( 18 )
disabled = true

[node name="start" type="CollisionShape2D" parent="AttackCollision"]
position = Vector2( 18.77, 34.4307 )
shape = SubResource( 19 )
disabled = true

[node name="SwingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="RayWall" type="RayCast2D" parent="."]
position = Vector2( 0, 25 )
enabled = true
cast_to = Vector2( -150, 0 )

[node name="RayChar" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -150, 0 )
collision_mask = 2

[node name="RayBehind" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 75, 0 )
collision_mask = 2

[node name="Effect_dmg" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AttackCollision" to="." method="_on_AttackCollision_body_entered"]
[connection signal="timeout" from="SwingTimer" to="." method="_on_SwingTimer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
